# ocamlformat-online-editor

./: .gitignore  README.md  wrangler.toml
client/: README.md  biome.json  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  ConfigForm.tsx  main.tsx  type.ts
client/src/components/: config_block.tsx  editor.tsx  number_field.tsx  select_field.tsx
ocamlfmt_js/: .ocamlformat  dune-project  index.html
ocamlfmt_js/lib/: config.ml  default_config.ml  dune  formatter.ml
